# sfml-triangulum

./: CMakeLists.txt  LICENSE  README.md
include/: Triangulum.h
include/Application/: Application.h
include/EventHandler/: EventHandler.h
include/Utils/: Utils.h
src/: Application.cpp  Application.h
src/EventHandler/: BasicEventCallback.h  ConditionalEventCallback.h  EventCallback.h  EventHandler.cpp  EventHandler.h
src/Utils/: FpsCounter.cpp  FpsCounter.h
